--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -12,8 +12,8 @@
           <div class="container-fluid">
               <h3 class="small-heading">Bienvenue chez</h3><h1 class="big-heading"> Mezzo</h1><h3 class="small-heading">le Partenaire de la Relation Client Sur-Mesure</h3>
               <div class="d-grid gap-3 d-md-flex justify-content-md-center flex-grid-center">    
-                <button type="button" class="btn btn-outline-light btn-lg  button-effect">En savoir plus</button>
-                <button type="button" class="btn btn-outline-light btn-lg button-effect ">Nous contacter</button>
+                <button (click)="redirect('histoire');" type="button"  class="btn btn-outline-light btn-lg  button-effect">En savoir plus</button>
+                <button (click)="redirect('contact');" type="button"   class="btn btn-outline-light btn-lg button-effect ">Nous contacter</button>
               </div>
           </div>
       </div>
@@ -24,8 +24,8 @@
         <div class="container-fluid">
           <h3 class="small-heading">Bienvenue chez</h3><h1 class="big-heading"> Mezzo</h1><h3 class="small-heading">le Partenaire de la Relation Client Sur-Mesure</h3>
           <div class="d-grid gap-3 d-md-flex justify-content-md-center flex-grid-center">    
-            <button type="button" class="btn btn-outline-light btn-lg  button-effect">En savoir plus</button>
-            <button type="button" class="btn btn-outline-light btn-lg button-effect ">Nous contacter</button>
+            <button (click)="redirect('histoire');" type="button" class="btn btn-outline-light btn-lg  button-effect">En savoir plus</button>
+            <button (click)="redirect('contact');" type="button"  class="btn btn-outline-light btn-lg button-effect ">Nous contacter</button>
           </div>
       </div>
     </div>
@@ -36,8 +36,8 @@
         <div class="container-fluid">
           <h3 class="small-heading">Bienvenue chez</h3><h1 class="big-heading"> Mezzo</h1><h3 class="small-heading">le Partenaire de la Relation Client Sur-Mesure</h3>
           <div class="d-grid gap-3 d-md-flex justify-content-md-center flex-grid-center">    
-          <button type="button" class="btn btn-outline-light btn-lg  button-effect">En savoir plus</button>
-          <button type="button" class="btn btn-outline-light btn-lg button-effect">Nous contacter</button>
+          <button (click)="redirect('histoire');" type="button" class="btn btn-outline-light btn-lg  button-effect">En savoir plus</button>
+          <button (click)="redirect('contact');" type="button"  class="btn btn-outline-light btn-lg button-effect">Nous contacter</button>
         </div>
       </div>
       </div>
