--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -12,22 +12,29 @@
           <div class="row">
             <div class="col-lg-7">	
               <div class="contact">
-                <form class="form" name="enq"  >
+                <form class="form" name="enq" #addFor="ngForm" (ngSubmit)="onAddReclamation(addFor)"  >
                   <div class="row">
                     <div class="form-group col-md-6">
-                      <input type="text" name="name" class="form-control" placeholder="Nom" required="required">
+                      <input type="text" ngModel name="nom" id="nom" class="form-control" placeholder="Nom" required="required">
                     </div>
                     <div class="form-group col-md-6">
-                      <input type="email" name="email" class="form-control" placeholder="Email" required="required">
+                      <input type="text" ngModel name="prenom" id="prenom" class="form-control" placeholder="Prénom" required="required">
+                    </div>
+                    <div class="form-group col-md-6">
+                      <input type="email" ngModel name="email" id="email" class="form-control" placeholder="Email" required="required">
+                    </div>
+                    <div class="form-group col-md-6">
+                      <input type="text" ngModel name="telephone" id="telephone" class="form-control" placeholder="Téléphone" required="required">
                     </div>
                     <div class="form-group col-md-12">
-                      <input type="text" name="subject" class="form-control" placeholder="Sujet" required="required">
+                      <input type="text" ngModel name="sujet" id="sujet" class="form-control" placeholder="Sujet" required="required">
                     </div>
                     <div class="form-group col-md-12">
-                      <textarea rows="8"  name="message" class="form-control" placeholder="Votre Message" required="required"></textarea>
+                      <textarea rows="8" ngModel  name="message" id="message" class="form-control" placeholder="Votre Message" required="required"></textarea>
                     </div>
                     <div class="col-md-12 text-center">
-                      <button type="submit" value="Send message" name="submit" id="submitButton" class="btn btn-contact-bg" title="Submit Your Message!">Envoyer Message</button>
+                      <div class="alert alert-success"  *ngIf='isSent' >{{sentMessage}} <i class="fa-solid fa-check"></i></div>
+                      <button *ngIf='!isSent' [disabled]="addFor.invalid" type="submit" value="Send message"  class="btn btn-contact-bg" title="Submit Your Message!">Envoyer Message</button>
                     </div>
                   </div>
                 </form>
