--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,12 +4,11 @@
                 <h2>Suivez-nous</h2>
                 <p>Recevez chaque semaine nos meilleurs articles !</p>
                 <div class="content">    
-                    
-                  <form  class="subscription" >
-                    <input class="add-email" type="email" name="email" id="email" ngModel placeholder="Votre adresse email">
+                    <div class="alert alert-success"  *ngIf='isSubmitted' >{{successMessage}}</div>
+                  <form  *ngIf='!isSubmitted' class="subscription" #f="ngForm" (ngSubmit)=" onSubmit(f)" >
+                    <input class="add-email" type="text" name="value" id="value" ngModel placeholder="Votre adresse email">
                     <button class="submit-email" type="submit">
-                      <span class="before-submit">S'ABONNER</span>
-                      
+                      <span class="before-submit">S'abonner</span> 
                      </button>
                   </form>
                 </div>
@@ -43,7 +42,7 @@
                   <div class="footer-widget">
                       <h6>Contact</h6>
                       <ul>
-                        <li><a href="#"><i class="fa-solid fa-location-dot"></i> 1 ter Avenue de la Marne 59290 Wasquehal</a></li>
+                        <li><a href="#"><i class="fa-solid fa-location-dot"></i> 1 ter Avenue de la Marne<br> 59290 Wasquehal</a></li>
                         <li><a href="#"><i class="fa-solid fa-phone"></i> +33(0)3 59 30 53 00</a></li>
                         <li><a href="#"><i class="fa-solid fa-envelope"></i> relation@somezzo.com</a></li>
                     </ul>
@@ -54,11 +53,11 @@
                   <div class="footer-widget">
                       <h6>Navigation</h6>
                       <ul>
-                          <li><a href="#">MEZZO</a></li>
-                          <li><a href="#">Nos Pôles d'Expertise</a></li>
-                          <li><a href="#">Vos Besoins</a></li>
-                          <li><a href="#">Actualités</a></li>
-                          <li><a href="#">Nous contacter</a></li>
+                          <li><a href="#"[routerLink]="['histoire']" routerLinkActive="active" role="button" >MEZZO</a></li>
+                          <li><a href="#" [routerLink]="['expertise']" routerLinkActive="active" role="button">Nos Pôles d'Expertise</a></li>
+                          <li><a href="#" [routerLink]="['services']" routerLinkActive="active" role="button">Vos Besoins</a></li>
+                          <li><a href="#" [routerLink]="['actualite']" routerLinkActive="active" role="button">Actualités</a></li>
+                          <li><a href="#" [routerLink]="['contact']" routerLinkActive="active" role="button">Nous contacter</a></li>
                     
     
                       </ul>
@@ -67,14 +66,7 @@
     
               <div class="col-lg-2  offset-lg-1 col-md-6 col-sm-6">
                   <div class="footer-widget">
-                      <h6>Recherche</h6>
-                      <div class="footer-newslatter">
-                        <form action="#">
-                            <input type="text" placeholder="Recherche">
-                            <button type="submit"><span><i class="fa-solid fa-magnifying-glass"
-                                        arial-hidden="true"></i></span></button>
-                        </form>
-                    </div>
+                     
                     <h6>Suivez-nous</h6>
                     <ul class="footer-icons">
                         <li><a href="#"><i class="fa-brands fa-facebook footer-icon"></i></a></li>
