--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 
-<nav id="navbar" class="navbar sticky-top navbar-expand-lg navbar-dark" (scroll)="onWindowScroll();">
+<nav id="navbar" class="navbar sticky-top navbar-expand-lg navbar-dark" >
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="assets/Logo_Mezzo.png" id="logo" class="img-responsive" routerLink="/" alt="Logo"> 
@@ -23,7 +23,7 @@
           </ul>
         </li> 
         <li class="nav-item dropdown">
-          <a class="nav-link menu-link" href="#" [routerLink]="['home']" routerLinkActive="active" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link menu-link" href="#" [routerLink]="['expertise']" routerLinkActive="active" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Nos Pôles d'Expertise
           </a>
           <ul class="dropdown-menu show" aria-labelledby="navbarDropdownMenuLink">
@@ -33,30 +33,18 @@
           </ul>
         </li> 
         <li class="nav-item dropdown">
-          <a class="nav-link menu-link" href="#" [routerLink]="['home']" routerLinkActive="active" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link menu-link" href="#" [routerLink]="['services']" routerLinkActive="active" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Vos Besoins
           </a>
-          <ul class="dropdown-menu show" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item " href="#" [routerLink]="['home']" routerLinkActive="active">Optimiser les coûts</a></li>
-            <li><a class="dropdown-item " href="#" [routerLink]="['home']" routerLinkActive="active">Développez votre Chiffre d'Affaire</a></li>
-            <li><a class="dropdown-item " href="#" [routerLink]="['home']" routerLinkActive="active">Adapter le savoir être au profils sectoriels de vos Clients</a></li>
-            <li><a class="dropdown-item " href="#" [routerLink]="['home']" routerLinkActive="active">Transformer l'expérience en enchantement Client</a></li>
-            <li><a class="dropdown-item " href="#" [routerLink]="['home']" routerLinkActive="active">Personnaliser votre centre interne</a></li>
-            <li><a class="dropdown-item " href="#" [routerLink]="['home']" routerLinkActive="active">Réussir votre externalisation</a></li>
-          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link menu-link" [routerLink]="['home']" routerLinkActive="active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Actualités
+          <a class="nav-link menu-link" [routerLink]="['actualite']" routerLinkActive="active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Nos Actualités
           </a>
-          <ul class="dropdown-menu show" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#" [routerLink]="['home']" routerLinkActive="active">Actualités</a></li>
-            <li><a class="dropdown-item" href="#" [routerLink]="['home']" routerLinkActive="active">Publications</a></li>
-          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link menu-link" href="#" [routerLink]="['home']" routerLinkActive="active" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Nous contacter
+          <a class="nav-link menu-link" href="#" [routerLink]="['contact']" routerLinkActive="active" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Nous Rejoindre
           </a>
           <ul class="dropdown-menu show" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="#" [routerLink]="['contact']" routerLinkActive="active">Contact</a></li>
