--- a/src/app/offre/offre.component.html
+++ b/src/app/offre/offre.component.html
@@ -11,52 +11,8 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-12 card-margin">
-            <div class="card search-form">
-                <div class="card-body p-0">
-                    <form id="search-form">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="row no-gutters">
-                                    <div class="col-lg-3 col-md-3 col-sm-12 ">
-                                        <div class="form-group">
-                                          <select id="jobType" class="custom-select">
-                                            <option selected>Secteur </option>
-                                            <option>Conseillers Clientèle</option>
-                                            <option>Direction Clientèle & Commerciale</option>
-                                            <option>Direction des Opérations</option>
-                                            <option>Direction Financière</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                    <div class="col-lg-3 col-md-3 col-sm-12 ">
-                                        <div class="form-group">
-                                          <select id="jobType" class="custom-select">
-                                            <option selected>Type d'emploi </option>
-                                            <option value="type1">CDI</option>
-                                            <option value="type3">CDI/CDD</option>
-                                          </select>
-                                        </div>
-                                      </div>
-                                    <div class="col-lg-5 col-md-5 col-sm-12 p-0">
-                                        <input type="text" placeholder="Titre du poste" class="form-control" id="search" name="search">
-                                    </div>
-                                    <div class="col-lg-1 col-md-3 col-sm-12 p-0">
-                                        <button type="submit" class="btn btn-base">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<section class="section gray-bg" id="blog">
+  </div>
+  <section class="section gray-bg" id="blog">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-7 text-center">
@@ -65,8 +21,17 @@
                 </div>
             </div>
         </div>
+        <div class="row d-flex justify-content-center ">
+            <div class="col-md-6">
+                  <div class="input-box">
+                    <input type="text" placeholder="Titre du poste" class="form-control" (ngModelChange)="searchOffresTitre(key.value)" #key="ngModel" ngModel  name="key" id="searchName">
+                    <i class="fa fa-search"></i>                    
+                  </div>
+                
+            </div>
+        </div>
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4" *ngFor="let offre of offres" >
                 <div class="blog-grid">
                     <div class="blog-img">
                         <a href="#">
@@ -74,67 +39,33 @@
                         </a>
                     </div>
                     <div class="blog-info">
-                        <h5><a href="#">Agent Back Office</a></h5>
-                    <h6><span class="badge bg-secondary">Profil recherché:</span></h6>
-                    <ul>
-                        <li> Parfaite maîtrise du Français à l’écrit (orthographe, grammaire et conjugaison),</li>
-                        <li>Une bonne maîtrise de l’Anglais,</li>
-                        <li>Rapidité de saisie sur clavier,</li>
-                        <li>Aisance relationnelle et sens du service.</li>
-                    </ul>
-                    <h6><span class="badge bg-secondary">Salaire:</span></h6>
-                    <p>1200dt</p>
-                    <h6><span class="badge bg-secondary">Type:</span></h6>
-                    <p>CDI, 40h/7j</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="blog-grid">
-                    <div class="blog-img">
-                        <a href="#">
-                            <img src="https://media-exp1.licdn.com/dms/image/C4E22AQG9-Y-OsBpeMQ/feedshare-shrink_800/0/1647852098630?e=2147483647&v=beta&t=NRYSKwkSTQ8UvgWDOJt0rnPJTCXpj6ncGygi4bxuMas" title="" alt="">
-                        </a>
-                    </div>
-                    <div class="blog-info">
-                        <h5><a href="#">Assistante Commerciale</a></h5>
-                    <h6><span class="badge bg-secondary">Profil recherché:</span></h6>
-                    <ul>
-                        <li>Expérience probante et significative d’au moins 2 ans dans un poste similaire,</li>
-                        <li>Excellent niveau d’expression orale et écrite en français, un bon niveau d’Italien et d’anglais,</li>
-                        <li>Aptitude à communiquer (à l’oral et à l’écrit) et à convaincre,</li>
-                        <li>Aisance relationnelle et sens du service.</li>
-                    </ul>
-                    <h6><span class="badge bg-secondary">Salaire:</span></h6>
-                    <p>1200dt</p>
-                    <h6><span class="badge bg-secondary">Type:</span></h6>
-                    <p>CDI, 40h/7j</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="blog-grid">
-                    <div class="blog-img">
-                        <a href="#">
-                            <img src="https://media-exp1.licdn.com/dms/image/C4E22AQG9-Y-OsBpeMQ/feedshare-shrink_800/0/1647852098630?e=2147483647&v=beta&t=NRYSKwkSTQ8UvgWDOJt0rnPJTCXpj6ncGygi4bxuMas" title="" alt="">
-                        </a>
-                    </div>
-                    <div class="blog-info">
-                        <h5><a href="#">Télévendeurs langue française</a></h5>
-                        <h6><span class="badge bg-secondary">Profil recherché:</span></h6>
-                    <ul>
-                        <li>Aptitude à communiquer (à l’oral et à l’écrit) et à convaincre,</li>
-                        <li>Aisance relationnelle et sens du service.</li>
-                    </ul>
-                    <h6><span class="badge bg-secondary">Salaire:</span></h6>
-                    <p>1000dt</p>
-                    <h6><span class="badge bg-secondary">Type:</span></h6>
-                    <p>CDI, 40h/7j</p>  
+                        <h5><a href="#">{{offre.titre}}</a></h5>
+                    <h6><span class="badge ">Profil recherché:</span></h6>
+                    <p>
+                        {{offre.profilRecherche}}
+                    </p>
+                    <h6><span class="badge ">Salaire:</span></h6>
+                    <p>{{offre.salaire}}dt</p>
+                    <h6><span class="badge ">Type:</span></h6>
+                    <p>{{offre.type}}</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 </section>
+<div class="section-candidature" style="background-image:url(assets/slider-2-1.jpg) ;">
+    <div class="row">
+        <div class="col-lg-6 ">
+            <h3>Candidature Spontanée</h3>
+            <p>Proposez-nous votre candidature et si vos compétences correspondent à l’une de nos opportunités de poste, nos consultants vous contacteront dans les meilleurs délais.</p>
+        </div>
+            <div class="col-lg-6 ">
+            <button (click)="redirect('candidature');" type="button" id="submitButton" class="candidature-btn btn btn-contact-bg" >Candidature Spontanée</button>
+        </div>
+          
+    </div>
+</div>
 
   
